# Literature-search-and-analysis

./: .gitignore  Comparison_of_method_scores.ipynb  LLM_software_assessment.ipynb  LLM_software_assessment_2.ipynb  Literature analysis.ipynb  Literature analysis_v2.1.ipynb  Literature analysis_v2.2.1.ipynb  Literature analysis_v2.2.ipynb  Literature analysis_v2.3.ipynb  Literature analysis_v2.4.ipynb  Literature analysis_v2.5.ipynb  Literature analysis_v2.6.ipynb  Literature analysis_v2.7.ipynb  Literature analysis_v2.8.ipynb  Literature analysis_v2.ipynb  README.md  Removed terms101025.txt  Semantic_scholar_search.ipynb  Software_data_visualization.ipynb  Visializations.ipynb  Visualizations_v2.ipynb  Visualizations_v3.2.ipynb  Visualizations_v3.3.ipynb  Visualizations_v3.3_.ipynb  Visualizations_v3.ipynb  config_LLM-example.txt  field_of_study_frequencies.csv  field_of_study_frequencies_1st.csv  hello.py  pyproject.toml  semantic_scholar_2025_02_14_reliability_resilience_power_systems_author_frequencies.csv  semantic_scholar_2025_02_14_reliability_resilience_power_systems_field_frequencies.csv  semantic_scholar_2025_02_14_reliability_resilience_power_systems_venue_frequencies.csv  semantic_scholar_2025_02_20_author_analysis.csv  term_frequencies_2025_02_24.json  venue_frequencies.csv  venue_frequencies_1st.csv  workflow.mmd
