[project]
name = "literature-search-and-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bertopic>=0.17.0",
    "hf-xet>=1.1.3",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "networkx>=3.5",
    "nltk>=3.9.1",
    "openai>=1.64.0",
    "pandas>=2.2.3",
    "pyldavis>=3.4.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "tiktoken>=0.9.0",
]
